Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-62226

[X11] Qxcbconnection fails to build with Xinput 2.0

    XMLWordPrintable

Details

    • d293f071f5b5c4bdafa4bfcf55c778d09bf9661d

    Description

      Qxcbconnection fails to build with Xinput 2.0 since an ifdef is missing from qtbase/src/plugins/platforms/xcb/qxcbconnection_xi.cpp:1029.
      QXcbConnection::isTouchScreen() needs to be wrapped with #ifdef XCB_USE_XINPUT22 as it is done in the header.

      #ifdef XCB_USE_XINPUT22 
      bool QXcbConnection::isTouchScreen(int id) const 
      { 
      auto device = m_touchDevices.value(id); 
      return device && device->qtTouchDevice 
      && device->qtTouchDevice->type() == 
      QTouchDevice::TouchScreen; 
      } 
      #endif 
      

      Attachments

        For Gerrit Dashboard: QTBUG-62226
        # Subject Branch Project Status CR V

        Activity

          People

            andysh Andy Shaw
            kileppal Kimmo Leppälä
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes