Add missing #ifdef for isTouchScreen() implementation

The definition of isTouchScreen() is protected with XCB_USE_XINPUT22 so
the implementation needs to have this too.

Task-number: QTBUG-62226
Change-Id: Icc3de01a6cb1299b43e56fc9f77833764131ca4b
Reviewed-by: Gatis Paeglis <gatis.paeglis@qt.io>